transition mobile fix

--- a/css/index.css
+++ b/css/index.css
@@ -559,6 +559,12 @@ button {
   opacity: 0;
 }
 
+@media screen and (max-width: 992px) {
+  .gallery-wrapper .blue {
+    transition: opacity .1s ease;
+  }
+}
+
 .gallery-wrapper .blue .border {
   height: 100%;
   width: 100%;
